Fixed svg sprite issue

--- a/source/index.html
+++ b/source/index.html
@@ -6,11 +6,19 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <link rel="stylesheet" href="css/style.css">
-  <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+  <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
   <title>Pantheon - First town on Mars</title>
 </head>
 <body>
-  <h1>Destination: Pantheon</h1>
+  <header class="header">
+    <div class="logo">
+      <svg class="logo__icon" width="39" height="39">
+        <use xlink:href="img/sprite.svg#logo"></use>
+      </svg>
+      <p class="logo__text">Pantheon</p>
+      <p class="logo__undertext">project</p>
+    </div>
+  </header>
 </body>
 </html>
