Fixed issue with fonts

--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+  <link rel="stylesheet" href="fonts/fonts.css">
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -19,6 +20,18 @@
       <p class="logo__text">Pantheon</p>
       <p class="logo__undertext">project</p>
     </div>
+
+    <h1 class="header__title">
+      <span class="header__title-1">Destination:</span>
+      <span class="header__title-2">Pantheon,</span>
+      <span class="header__title-3">Mars</span>
+    </h1>
+
+    <video class="header__video" src="#" poster="img/hero-video.jpg" width="214" height="139"></video>
+
+    <p class="header__description">First town on Mars planet a little way from Olimp Mons</p>
+
+    <button class="btn-down">Down</button>
   </header>
 </body>
 </html>
