Replaced Proxima font with Montserrat

--- a/source/index.html
+++ b/source/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <link rel="stylesheet" href="fonts/fonts.css">
+  <!-- <link rel="stylesheet" href="fonts/fonts.css"> -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="shortcut icon" type="image/x-icon" href="img/favicon.ico">
 
@@ -14,7 +14,7 @@
 <body>
   <header class="header">
     <div class="logo">
-      <svg class="logo__icon" width="39" height="39">
+      <svg class="logo__icon" width="48" height="48">
         <use xlink:href="img/sprite.svg#logo"></use>
       </svg>
       <p class="logo__text">Pantheon</p>
